# sql-assistant-with-local-llm

./: .gitignore  CHECKLIST.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  MANIFEST.md  MIGRATION.md  MIGRATION_SUMMARY.md  OLLAMA_MIGRATION.md  OLLAMA_QUICKSTART.md  QUICKREF.md  README.md  RESTRUCTURING_SUMMARY.md  SETUP_GUIDE.md  SETUP_LINUX.md  SETUP_MACOS.md  STATUS.md  __init__.py  app.py  config.json  config.py  config.yaml  docker-compose.yml  load_llm_model.py  load_sql_database.py  main.py  pyproject.toml  requirements-linux.txt  requirements-macos.txt  requirements.txt  run_tests.py
core/: __init__.py  logging.py
evaluation/: EVALUATION_GUIDE.md  QUICK_REFERENCE.md  __init__.py  dataset.json  evaluate_models.py  examples.py  metrics.py  report_generator.py  run_eval.py
llm/: __init__.py  inference.py  loader.py  prompts.py
scripts/: README.md
security/: __init__.py  sql_guardrails.py
sql/: __init__.py  executor.py  formatter.py  generator.py  schema_introspector.py  validator.py
tests/: COMPREHENSIVE_GUIDE.md  QUICK_REFERENCE.md  README.md  __init__.py  test_integration.py  test_llm_module.py  test_sql_generation.py
